Add depencies (commons lang3)

--- a/build.gradle
+++ b/build.gradle
@@ -11,3 +11,13 @@ jar {
 }
 
 buildDir = 'out'
+
+repositories {
+	mavenCentral()
+}
+
+dependencies {
+	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.1'
+//	compile 'org.apache.commons:commons-lang3':3.1'
+
+}
