--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,6 @@ repositories {
 }
 
 dependencies {
-	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.1'
-//	compile 'org.apache.commons:commons-lang3':3.1'
-
+	compile 'org.apache.commons:commons-lang3:3.1'
+	testCompile "junit:junit:4.11"
 }
